First Page outline-Done

--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My First Web Page</title>
+    <title>Miguel's Personal Website</title>
 </head>
 <body>
     <!-- Hello, I'm a comment -->
-    <h1>h1: Heading Level 1</h1>
-    <p>A paragraph (p) element</p>
+    <h1>Miguel Medina</h1>
+    <img src="https://cdn2.unrealengine.com/dead-by-daylight---gameplay---6-1920x1080-0b71c2ea2600.png" height="500" width="800"/>
+    <dl>
+        <dt>Linkedin</dt>
+        <dd> PLEASE ADD ME ON LINKEDIN I NEED 55+ CONNEctions</dd>
+    </dl>
+    <h2><b>About me</b></h2>
+    <p>Im a second year Software Engineering Student at Calpoly, some of my Hobbies are:</p>
+    <ul><li>PLaying DBD</li>
+        <li>PLaying DBD</li>
+        <li>PLaying DBD</li>
+    </ul>
+
 </body>
 </html>
