Hobbies and List added

--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
     <!-- Hello, I'm a comment -->
     <h1>Miguel Medina</h1>
     <img src="https://cdn2.unrealengine.com/dead-by-daylight---gameplay---6-1920x1080-0b71c2ea2600.png" height="500" width="800"/>
+    <h5><a href="second_page.html"> Second Page</a></h5>
     <dl>
+        <dt><h3>Linkedin</h3></dt>
+        <dd> PLEASE ADD ME ON LINKEDIN I NEED 55+ CONNECTIONS</dd>
+        
+    </dl>
+     <dl>
         <dt>Linkedin</dt>
-        <dd> PLEASE ADD ME ON LINKEDIN I NEED 55+ CONNEctions</dd>
+        <dd> PLEASE ADD ME ON LINKEDIN I NEED 55+ CONNECTIONS</dd>
+        
     </dl>
     <h2><b>About me</b></h2>
     <p>Im a second year Software Engineering Student at Calpoly, some of my Hobbies are:</p>
-    <ul><li>PLaying DBD</li>
-        <li>PLaying DBD</li>
+    <ul><li>Hiking</li>
+        <li>Playing Dead By Deadlight</li>
         <li>PLaying DBD</li>
     </ul>
 
