--- a/second_page.html
+++ b/second_page.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
+    <link href="styles.css" rel="stylesheet"/>  
     <head> <title> Miguels Recent Explorations</title></head>
 
     <body>
         <h1> Travels </h1>
         <h3> <a href="index.html"> Home </a></h3>
-
+        <div>
         <h2> Yosemite National Park</h2>
         <p> Here were my views while attempting to hike Upper Yosemite Falls</p>
+        </div>
 
+        <div>
         <h2> Chichin Itza </h2>
         <p> While I traveled in Mexico im grateful to have visited on of the 7 Wonders of the World </p>
-        
+        </div>
 
     </body>
 </html>
