Most of CSS part done

--- a/second_page.html
+++ b/second_page.html
@@ -8,11 +8,14 @@
         <h3> <a href="index.html"> Home </a></h3>
         <div>
         <h2> Yosemite National Park</h2>
+        <img src="IMG_8167.png" height="400" width="300"/>
+        <img src="IMG_8187.png" height="400" width="300"/>
         <p> Here were my views while attempting to hike Upper Yosemite Falls</p>
         </div>
 
         <div>
         <h2> Chichin Itza </h2>
+        <img src="IMG_6736.png" height="400" width="300"/>
         <p> While I traveled in Mexico im grateful to have visited on of the 7 Wonders of the World </p>
         </div>
 
