--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <!-- Hello, I'm a comment -->
         <h1>Miguel Medina</h1>
-        <img src="IMG_8274.JPG" height="600" width="450"/>
+        <img src="IMG_8274.JPG" height="400" width="30git 0"/>
         <h3><a href="index.html"> Home</a> <a href="second_page.html"> My Travels </a> </h3>
         
         <dl>
